tests/errors/multiple-setups.rs
fn main(){

}

#[adtest::adtest(setup = setup, setup = setup)]
fn invalid_test(){

}

fn setup(){

}